Dicount admin controller works fine
