# api.yml
@@ -109,6 +109,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Route'
+                
+    patch:
+      tags:
+        - Route
+      summary: Modify Route with given id.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Route'
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Route'
+                
   /admin/routes/{id}:
     parameters:
       - $ref: '#/components/parameters/id'
@@ -123,23 +142,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Route'
-    patch:
-      tags:
-        - Route
-      summary: Modify Route with given id.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/StopForm'
-      responses:
-        '200':
-          description: Ok
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RouteForm'
+    
     delete:
       tags:
         - Route
@@ -179,6 +182,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Discount'
+
+    patch:
+      tags:
+        - Discount
+      summary: Modify Discount with given id.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Discount'
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Discount'
+
   /admin/discounts/{id}:
     parameters:
       - $ref: '#/components/parameters/id'
@@ -193,23 +215,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Discount'
-    patch:
-      tags:
-        - Discount
-      summary: Modify Discount with given id.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/DiscountForm'
-      responses:
-        '200':
-          description: Ok
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Discount'
+
     delete:
       tags:
         - Discount
